instructions change for home page
changes home page instructions

--- a/Flask_template/templates/gallery.html
+++ b/Flask_template/templates/gallery.html
@@ -39,10 +39,10 @@
 
   <div class="container home shadow rounded p-4 mt-5 mb-5 text-center" data-aos="fade-up" style="background-color: white;">
     <div class="container-fluid mb-4 text-center">
-          <legend class='h1 header-main bottom-bord'>Photo Gallery</legend>
+          <legend class='h1 header-main bottom-bord'>Gallery</legend>
   </div>
     <div class="containter mb-4">
-      <h5>Check out the image gallery to better understand how the tool works behind the scenes</h5>
+      <h5>Check out the gallery to better understand how the tool works behind the scenes</h5>
    </div> 
    <div class="container">
       <p>Tracking Poses</p>
@@ -85,8 +85,8 @@
   <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-header bottom-bord">
-          <h5 class="modal-title" id="exampleModalLabel">Djokovic</h5>
+        <div class="modal-header bottom-bord modal-back">
+          <h5 class="modal-title" id="exampleModalLabel">Tracking Poses and Body Angles</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
