--- a/Flask_template/templates/stroke.html
+++ b/Flask_template/templates/stroke.html
@@ -36,8 +36,8 @@
 
   <!-- start of content that hides on click -->
 
-
-  <div class="container home shadow rounded p-4 mt-5 mb-5 text-center" data-aos="fade-up" style="background-color:white; min-height:650px">
+<div class="container-fluid" style="min-height:650px">
+  <div class="container home shadow rounded p-4 mt-5 mb-5 text-center" data-aos="fade-up" style="background-color:white; min-height:450px">
     <div class="container-fluid mb-4 text-center">
           <legend class='h1 header-main bottom-bord'>Stroke Analysis</legend>
   </div>
@@ -82,6 +82,8 @@
       <div class='container-fluid text-center' id="loading" style="display:none"></div>
 
   </div>
+</div>
+  
 <br>
 <br>
 
