added container min height

--- a/Flask_template/templates/stroke.html
+++ b/Flask_template/templates/stroke.html
@@ -72,7 +72,7 @@
           <button type="submit" class="btn btn-primary btn-rounded pl-4 pr-4 button-main" id="stroke_submit" onclick="loading();">Submit</button>
         </form>
         <br>
-        <p class='text-center' style="color: red;">*Please do not refresh page when results are generated. Doing so will duplicate your results.<br>
+        <p class='text-center' style="color: red;">* Refreshing or navigating away from results page will restart the process.<br>
         </p>
       </div>
       <!-- Loading bar -->
