--- a/Flask_template/templates/history.html
+++ b/Flask_template/templates/history.html
@@ -36,8 +36,8 @@
 
   <!-- start of content that hides on click -->
 
-
-  <div class="container home shadow rounded p-4 mt-5 mb-5 text-center" data-aos="fade-up" style="background-color:white; min-height: 650px;">
+<div class="container-fluid" style="min-height: 700px;">
+  <div class="container home shadow rounded p-4 mt-5 mb-5 text-center" data-aos="fade-up" style="background-color:white;">
     <div class="container-fluid mb-4 text-center">
           <legend class='h1 header-main bottom-bord'>Scoring History</legend>
   </div>
@@ -72,6 +72,7 @@
    </div>      
     </div>
   </div>
+</div>
 <br>
 <br>
 
