--- a/Flask_template/templates/index.html
+++ b/Flask_template/templates/index.html
@@ -102,7 +102,7 @@
 
         <div class="row featurette p-2 rounded shadow footer-color" data-aos="fade-right">
           <div class="col-md-7">
-            <h2 class="featurette-heading">Utilizing Pose Estimation. <span class="text-muted">It'll blow your mind.</span></h2>
+            <h2 class="featurette-heading header-main">Utilizing Pose Estimation. <span class="text-muted">It'll blow your mind.</span></h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           </div>
           <div class="col-md-5">
@@ -114,7 +114,7 @@
 
         <div class="row featurette p-2 rounded shadow footer-color" data-aos="fade-left">
           <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Classifying Your Shot With Azure Custom Vision. <span class="text-muted">See for yourself.</span></h2>
+            <h2 class="featurette-heading header-main">Classifying Your Shot With Azure Custom Vision. <span class="text-muted">See for yourself.</span></h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           </div>
           <div class="col-md-5 order-md-1">
@@ -126,7 +126,7 @@
 
         <div class="row featurette p-2 rounded shadow footer-color" data-aos="fade-right">
           <div class="col-md-7">
-            <h2 class="featurette-heading">Improve Your Game, <span class="text-muted">And Repeat.</span></h2>
+            <h2 class="featurette-heading header-main">Improve Your Game, <span class="text-muted">And Repeat.</span></h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           </div>
           <div class="col-md-5">
