--- a/Flask_template/templates/gallery.html
+++ b/Flask_template/templates/gallery.html
@@ -42,35 +42,35 @@
           <legend class='h1 header-main bottom-bord'>Gallery</legend>
   </div>
     <div class="containter mb-4">
-      <h5>Check out the gallery to better understand how the tool works behind the scenes</h5>
+      <h5 class="header-third">Check out the gallery to better understand how the tool works behind the scenes</h5>
    </div> 
    <div class="container">
-      <p>Tracking Poses</p>
+      <p class="header-secondary ">Tracking Poses</p>
    </div>
 
    <div class="row">
      <div class="col-md-3">
        <div class="container p-1">
           <img src="../static/assets/img/djok_gallery/djok_start.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
-          <label class="decrease-font">Start</label>
+          <label class="decrease-font header-secondary ">Start</label>
         </div>
      </div>
      <div class="col-md-3">
        <div class="container p-1">
          <img src="../static/assets/img/djok_gallery/djok_load.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
-         <label class="decrease-font">Load</label>
+         <label class="decrease-font header-secondary">Load</label>
         </div>
     </div>
     <div class="col-md-3">
       <div class="container p-1">
           <img src="../static/assets/img/djok_gallery/djok_extend.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
-          <label class="decrease-font">Extend</label>
+          <label class="decrease-font header-secondary">Extend</label>
         </div>
     </div>
     <div class="col-md-3">
       <div class="container p-1">
         <img src="../static/assets/img/djok_gallery/djok_finish.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%"> 
-        <label class="decrease-font">Finish</label>
+        <label class="decrease-font header-secondary">Finish</label>
       </div>
     </div>
     <div class="container-fluid text-center">
