adeed auzre content in gallery

--- a/Flask_template/templates/gallery.html
+++ b/Flask_template/templates/gallery.html
@@ -36,13 +36,56 @@
 
   <!-- start of content that hides on click -->
 
-
+<!-- Pose estimation gallery -->
   <div class="container home shadow rounded p-4 mt-5 mb-5 text-center" data-aos="fade-up" style="background-color: white;">
     <div class="container-fluid mb-4 text-center">
-          <legend class='h1 header-main bottom-bord'>Gallery</legend>
+          <legend class='h1 header-main bottom-bord'>Pose Estimation</legend>
   </div>
     <div class="containter mb-4">
-      <h5 class="header-third">Check out the gallery to better understand how the tool works behind the scenes</h5>
+      <h5 class="header-third">Check out the below content to see how pose estimation works behind the scenes</h5>
+   </div> 
+   <div class="container">
+      <p class="header-secondary ">Tracking Poses</p>
+   </div>
+
+   <div class="row">
+     <div class="col-md-3">
+       <div class="container p-1">
+          <img src="../static/assets/img/djok_gallery/djok_start.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
+          <label class="decrease-font header-secondary ">Start</label>
+        </div>
+     </div>
+     <div class="col-md-3">
+       <div class="container p-1">
+         <img src="../static/assets/img/djok_gallery/djok_load.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
+         <label class="decrease-font header-secondary">Load</label>
+        </div>
+    </div>
+    <div class="col-md-3">
+      <div class="container p-1">
+          <img src="../static/assets/img/djok_gallery/djok_extend.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
+          <label class="decrease-font header-secondary">Extend</label>
+        </div>
+    </div>
+    <div class="col-md-3">
+      <div class="container p-1">
+        <img src="../static/assets/img/djok_gallery/djok_finish.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%"> 
+        <label class="decrease-font header-secondary">Finish</label>
+      </div>
+    </div>
+    <div class="container-fluid text-center">
+      <button type="submit" class="btn btn-secondary btn-sm rounded" id="pose_video" data-toggle="modal" data-target="#exampleModal1">Watch Serve</button>
+  </div>
+   </div>    
+  </div>
+
+  <!-- azure classification gallery -->
+  <div class="container home shadow rounded p-4 mt-5 mb-5 text-center" data-aos="fade-up" style="background-color: white;">
+    <div class="container-fluid mb-4 text-center">
+          <legend class='h1 header-main bottom-bord'>Image Classification</legend>
+  </div>
+    <div class="containter mb-4">
+      <h5 class="header-third">Check out the below content to see how Azure Custom Vision works behind the scenes</h5>
    </div> 
    <div class="container">
       <p class="header-secondary ">Tracking Poses</p>
