--- a/Flask_template/templates/graphs.html
+++ b/Flask_template/templates/graphs.html
@@ -56,7 +56,7 @@
                     <button class="btn btn-outline-primary btn-sm" id="Body" onclick="content_body();">Body</button>
                 </div>
             </div>
-            <legend class='border-bottom h6 header-secondary '>{{name}}'s right and left arm throughout the stroke</legend>
+            <legend class='border-bottom h6 header-third'>{{name}}'s right and left arm throughout the stroke</legend>
             <div class="container" id="content_legs">
                 <canvas id="myChart" max-width="300" max-height="300"></canvas>
             </div>
@@ -79,7 +79,7 @@
                     <button class="btn btn-outline-primary btn-sm" id="Body_user" onclick="content_body_user();">Body</button>
                 </div>
             </div>
-            <legend class='border-bottom h6 header-secondary'>Your right and left angles throughout the stroke</legend>
+            <legend class='border-bottom h6 header-third'>Your right and left angles throughout the stroke</legend>
             <div class="container" id="content_legs_user">
                 <canvas id="myChart4" max-width="300" max-height="300"></canvas>
             </div>
@@ -99,11 +99,11 @@
             <button type="submit" class="btn btn-secondary btn-sm rounded" id="phase_skteches" data-toggle="modal" data-target="#exampleModal">Phase Diagrams</button>
         </div>
         <div class="col-md-6">
-            <legend class='border-bottom h6 header-secondary'>{{name}} shot breakdown (%)</legend>
+            <legend class='border-bottom h6 header-third'>{{name}} shot breakdown (%)</legend>
             <canvas id="myChart7" max-width="300" max-height="300"></canvas>
         </div>
         <div class="col-md-6">
-            <legend class='border-bottom h6 header-secondary'>Your shot breakdown (%)</legend>
+            <legend class='border-bottom h6 header-third'>Your shot breakdown (%)</legend>
             <canvas id="myChart8" max-width="300" max-height="300"></canvas>
         </div>
     </div>
@@ -140,7 +140,7 @@
         <div class="col-md-12">
             <div class='container mt-3'> 
                 <div>
-                    <h5>Legs:</h5>
+                    <h5 class="header-third">Legs:</h5>
                     <ul>
                         {% for tip in leg_tips %}
                         {% if '!' in tip  %}
@@ -152,7 +152,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h5>Arms:</h5>
+                    <h5 class="header-third">Arms:</h5>
                     <ul>
                         {% for tip in arm_tips %}
                         {% if '!' in tip  %}
@@ -164,7 +164,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h5>Body:</h5>
+                    <h5 class="header-third">Body:</h5>
                     <ul>
                         {% for tip in body_tips %}
                         {% if '!' in tip  %}
