--- a/Flask_template/templates/gallery.html
+++ b/Flask_template/templates/gallery.html
@@ -21,6 +21,9 @@
         <li class="nav-item active">
             <a class="nav-link nav-color-active" href="{{url_for('gallery')}}">Gallery</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link nav-color" href="{{url_for('account')}}">My Account</a>
+          </li>
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
