--- a/Flask_template/templates/home.html
+++ b/Flask_template/templates/home.html
@@ -20,6 +20,9 @@
       <li class="nav-item">
         <a class="nav-link nav-color" href="{{url_for('gallery')}}">Gallery</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link nav-color" href="{{url_for('account')}}">My Account</a>
+      </li>
     </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
@@ -31,7 +34,7 @@
   </div>
 </nav>
   <!-- end of nav-->
- <div class="container-fluid" style="min-height: 700px;">
+ <div class="container-fluid mb-5" style="min-height: 700px;">
 
 
 <div class="container mt-3">
