--- a/Flask_template/templates/stroke.html
+++ b/Flask_template/templates/stroke.html
@@ -20,7 +20,9 @@
         <li class="nav-item">
           <a class="nav-link nav-color" href="{{url_for('gallery')}}">Gallery</a>
         </li>
-        
+        <li class="nav-item">
+          <a class="nav-link nav-color" href="{{url_for('account')}}">My Account</a>
+        </li>
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
