--- a/Flask_template/templates/login.html
+++ b/Flask_template/templates/login.html
@@ -2,6 +2,7 @@
 
 {% block body %}
 
+<div class="container-fluid" style="min-height: 750px;">
 <div class="container col-md-6 home shadow rounded p-4 mt-5 mb-5" data-aos="fade-up" style="background-color: white;">
     <div class="container text-center">
         <legend class='mb-4 h1 header-main bottom-bord'>Login</legend>
@@ -53,7 +54,7 @@
           </div>
       </div>
   </div>
-
+</div>
   <!-- Footer -->
   <div class="container-fluid p-5 footer-color">
     <footer class="container text-center">
