--- a/Flask_template/templates/graphs.html
+++ b/Flask_template/templates/graphs.html
@@ -47,6 +47,9 @@
         <div class="container-fluid text-center p-2">
             <button type="submit" class="btn btn-secondary btn-sm rounded" id="angle_skteches" data-toggle="modal" data-target="#exampleModal2" >Angle Diagrams</button>
         </div>
+        <div class="container text-center">
+            <p class="header-secondary">various body angles throughout the serve</p>
+        </div>
         <div class="col-md-6">
             <div class='row border m-3 rounded'>
                 <div class='col-md-4 text-center p-2'>
@@ -59,7 +62,7 @@
                     <button class="btn btn-outline-primary btn-sm" id="Body" onclick="content_body();">Body</button>
                 </div>
             </div>
-            <legend class='border-bottom h6 header-third'>{{name}}'s right and left arm throughout the stroke</legend>
+            <legend class='border-bottom h6 header-third'>{{name}}</legend>
             <div class="container" id="content_legs">
                 <canvas id="myChart" max-width="300" max-height="300"></canvas>
             </div>
@@ -82,7 +85,7 @@
                     <button class="btn btn-outline-primary btn-sm" id="Body_user" onclick="content_body_user();">Body</button>
                 </div>
             </div>
-            <legend class='border-bottom h6 header-third'>Your right and left angles throughout the stroke</legend>
+            <legend class='border-bottom h6 header-third'>{{current_user.first}}</legend>
             <div class="container" id="content_legs_user">
                 <canvas id="myChart4" max-width="300" max-height="300"></canvas>
             </div>
@@ -94,19 +97,23 @@
             </div>
         </div>
     </div>
-
+    <div class="container mb-3 mt-3 bottom-bord">
+    </div>
     <!--phase statistics-->
-    <div class='row mt-4'>
+    <div class='row'>
         <div class="container-fluid text-center p-2">
             <!-- Button trigger modal for phases-->
             <button type="submit" class="btn btn-secondary btn-sm rounded" id="phase_skteches" data-toggle="modal" data-target="#exampleModal">Phase Diagrams</button>
         </div>
+        <div class="container text-center">
+            <p class="header-secondary">shot breakdown (% of overall video spent in each phase)</p>
+        </div>
         <div class="col-md-6">
-            <legend class='border-bottom h6 header-third'>{{name}} shot breakdown (%)</legend>
+            <legend class='border-bottom h6 header-third'>{{name}}</legend>
             <canvas id="myChart7" max-width="300" max-height="300"></canvas>
         </div>
         <div class="col-md-6">
-            <legend class='border-bottom h6 header-third'>Your shot breakdown (%)</legend>
+            <legend class='border-bottom h6 header-third'>{{current_user.first}}</legend>
             <canvas id="myChart8" max-width="300" max-height="300"></canvas>
         </div>
     </div>
