--- a/Flask_template/templates/register.html
+++ b/Flask_template/templates/register.html
@@ -25,6 +25,14 @@
             {{form.last(class="form-control")}}
           </div>
         </div>
+        <div class="text-left mb-3 header-third">
+          <div>
+            {{form.dominant.label}}
+          </div>
+          <div>
+            {{form.dominant()}}
+          </div>
+        </div>
         <div class="form-group text-left mb-3 header-third">
           <div>
             {{form.email.label}}
