added different color alerts

--- a/Flask_template/templates/account.html
+++ b/Flask_template/templates/account.html
@@ -1,11 +1,12 @@
 {% extends 'layout.html' %}
 
 {% block body %}
+
 <!-- flash messages -->
-<div style="position:fixed; left:25%; top:2%;z-index:9999;" class="container w-50 text-center">{% with messages = get_flashed_messages()%}
+<div style="position:fixed; left:25%; top:2%;z-index:9999;" class="container w-50 text-center">{% with messages = get_flashed_messages(with_categories=true)%}
     {% if messages %}
-        {% for msg in messages %}
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
+        {% for category, msg in messages %}
+        <div class="alert alert-{{category}} alert-dismissible fade show" role="alert">
           <button type="button" class="close" data-dismiss="alert">&times;</button>
           {{msg}}
         </div>
@@ -102,6 +103,9 @@
     <div class="container">
         <button class="btn btn-primary btn-rounded pl-4 pr-4 button-main" id="account_submit" data-toggle="modal" data-target="#exampleModal1">Edit</button>
     </div>
+    <div class="container mt-5">
+        <button class="btn btn-secondary btn-rounded pl-4 pr-4" id="delete" data-toggle="modal" data-target="#exampleModal2"> Delete Account</button>
+    </div>
   </div>
 </div>
  
@@ -124,6 +128,35 @@
         </div>
     </div>
     </footer>
+  </div>
+<!-- delete account modal -->
+<div class="modal fade bd-example-modal-lg" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header bottom-bord modal-back">
+          <h5 class="modal-title" id="exampleModalLabel">Delete account</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <div class="container text-center">
+                <p class="header-secondary">Type in the below text to delete your account</p>
+            </div>
+            <div class="container text-center mb-4">
+                <h4 class="header-secondary">{{delete_w_email}}</h4>
+            </div>
+            <form method="POST" action='{{url_for("account")}}' class="container col-md-8" enctype="multipart/form-data">
+                <div class="form-group text-center mb-3">
+                    <input type="text" class="form-control" id="first" name="text" aria-describedby="firstHelp" placeholder='Type text here'>
+                  </div>
+                  <div class="container text-center mt-3">
+                    <button class="btn btn-danger btn-rounded pl-4 pr-4" id="account_delete">Delete</button>
+                </div>
+              </form>
+        </div>
+      </div>
+    </div>
   </div>
 
    <!-- Edit account modal -->
@@ -177,13 +210,15 @@
                     {% endif %}
                     
                 <div class="container text-center mt-3">
-                    <button class="btn btn-primary btn-rounded pl-4 pr-4 button-main" id="account_submit" data-toggle="modal" data-target="#exampleModal1">Update</button>
+                    <button class="btn btn-primary btn-rounded pl-4 pr-4 button-main" id="account_submit">Update</button>
                 </div>
               </form>
         </div>
       </div>
     </div>
   </div>
+
+
 
 
 {% endblock %}
