--- a/Flask_template/templates/home.html
+++ b/Flask_template/templates/home.html
@@ -2,17 +2,17 @@
 
 {% block body %}
 <!-- flash messages -->
-<div style="position:fixed; left:25%; top:2%;z-index:9999;" class="container w-50 text-center">{% with messages = get_flashed_messages()%}
+<div style="position:fixed; left:25%; top:2%;z-index:9999;" class="container w-50 text-center">{% with messages = get_flashed_messages(with_categories=true)%}
   {% if messages %}
-      {% for msg in messages %}
-      
-      <div class="alert alert-success alert-dismissible fade show" role="alert">
+      {% for category, msg in messages %}
+      <div class="alert alert-{{category}} alert-dismissible fade show" role="alert">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         {{msg}}
       </div>
       {% endfor %}
   {% endif %}
 {% endwith%}</div>
+
 <nav class="navbar navbar-expand-sm navbar-light bg-transparent">
   <a class="navbar-brand nav-color" href="#" style="margin-left: 2%;">Tennis Sense</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
