--- a/Flask_template/templates/login.html
+++ b/Flask_template/templates/login.html
@@ -1,6 +1,17 @@
 {% extends 'layout.html' %}
 
 {% block body %}
+<!-- flash messages -->
+<div style="position:fixed; left:25%; top:2%;z-index:9999;" class="container w-50 text-center">{% with messages = get_flashed_messages(with_categories=true)%}
+  {% if messages %}
+      {% for category, msg in messages %}
+      <div class="alert alert-{{category}} alert-dismissible fade show" role="alert">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{msg}}
+      </div>
+      {% endfor %}
+  {% endif %}
+{% endwith%}</div>
 
 <div class="container-fluid" style="min-height: 750px;">
 <div class="container col-md-6 home shadow rounded p-4 mt-5 mb-5" data-aos="fade-up" style="background-color: white;">
