--- a/Flask_template/templates/register.html
+++ b/Flask_template/templates/register.html
@@ -1,7 +1,17 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-
+<!-- flash messages -->
+<div style="position:fixed; left:25%; top:2%;z-index:9999;" class="container w-50 text-center">{% with messages = get_flashed_messages(with_categories=true)%}
+  {% if messages %}
+      {% for category, msg in messages %}
+      <div class="alert alert-{{category}} alert-dismissible fade show" role="alert">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{msg}}
+      </div>
+      {% endfor %}
+  {% endif %}
+{% endwith%}</div>
 <div class="container col-md-6 home shadow rounded p-4 mt-4" data-aos="fade-up" style="background-color:white;">
     <div class="container text-center">
         <legend class='mb-4 h1 header-main bottom-bord'>Register</legend>
