--- a/Flask_template/templates/graphs.html
+++ b/Flask_template/templates/graphs.html
@@ -35,6 +35,27 @@
     </div>
   </nav>
   <!-- end of navbar -->
+<!-- results and score -->
+<div class="container home shadow rounded p-3 mt-4 mb-4 footer-color" data-aos="fade-up" id='content'>
+    <div class="container-fluid">
+        <div class="container-fluid text-center">
+            <legend class='h1 header-main bottom-bord'>Score</legend>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12 pr-5 pl-5">
+            <div class='container-fluid text-center mt-3 rounded'>
+                <h1 class="header-secondary ">{{score}}/100</h1>
+            </div>
+            <div class="container-fluid text-center p-2">
+                <button type="submit" class="btn btn-secondary btn-sm rounded" id="scoring_criteria" data-toggle="modal" data-target="#exampleModal3" >Scoring Criteria</button>
+            </div>
+        </div>
+    </div>
+
+</div>
+
 <div class="container home shadow rounded p-3 mt-4 text-center footer-color" data-aos="fade-up">
     <div class="container-fluid">
         <div class="container-fluid text-center">
@@ -48,18 +69,19 @@
             <button type="submit" class="btn btn-secondary btn-sm rounded" id="angle_skteches" data-toggle="modal" data-target="#exampleModal2" >Angle Diagrams</button>
         </div>
         <div class="container text-center">
-            <p class="header-secondary">various body angles throughout the serve</p>
+            <p class="mb-3 header-secondary">various body angles throughout the serve</p>
+            <small class="header-secondary">you can select which joints to compare from the options below</small>
         </div>
         <div class="col-md-6">
             <div class='row border m-3 rounded'>
                 <div class='col-md-4 text-center p-2'>
-                    <button type="submit" class="btn btn-outline-primary btn-sm" id="Legs" onclick="content_legs();">Legs</button>
+                    <button type="submit" class="btn btn-outline-primary btn-sm" id="Legs" onclick="content_legs();">Knee</button>
                 </div>
                 <div class='col-md-4 text-center p-2'>
-                    <button class="btn btn-outline-primary btn-sm" id="Arms" onclick="content_arms();">Arms</button>
+                    <button class="btn btn-outline-primary btn-sm" id="Arms" onclick="content_arms();">Elbow</button>
                 </div>
                 <div class='col-md-4 text-center p-2'>
-                    <button class="btn btn-outline-primary btn-sm" id="Body" onclick="content_body();">Body</button>
+                    <button class="btn btn-outline-primary btn-sm" id="Body" onclick="content_body();">Shoulder</button>
                 </div>
             </div>
             <legend class='border-bottom h6 header-third'>{{name}}</legend>
@@ -76,13 +98,13 @@
         <div class="col-md-6">
             <div class='row border m-3 rounded'>
                 <div class='col-md-4 text-center p-2'>
-                    <button type="submit" class="btn btn-outline-primary btn-sm" id="Legs_user" onclick="content_legs_user();">Legs</button>
+                    <button type="submit" class="btn btn-outline-primary btn-sm" id="Legs_user" onclick="content_legs_user();">Knee</button>
                 </div>
                 <div class='col-md-4 text-center p-2'>
-                    <button class="btn btn-outline-primary btn-sm" id="Arms_user" onclick="content_arms_user();">Arms</button>
+                    <button class="btn btn-outline-primary btn-sm" id="Arms_user" onclick="content_arms_user();">Elbow</button>
                 </div>
                 <div class='col-md-4 text-center p-2'>
-                    <button class="btn btn-outline-primary btn-sm" id="Body_user" onclick="content_body_user();">Body</button>
+                    <button class="btn btn-outline-primary btn-sm" id="Body_user" onclick="content_body_user();">Shoulder</button>
                 </div>
             </div>
             <legend class='border-bottom h6 header-third'>{{current_user.first}}</legend>
@@ -119,27 +141,6 @@
     </div>
 </div>
 
-<!-- results and score -->
-<div class="container home shadow rounded p-3 mt-4 mb-4 footer-color" data-aos="fade-up" id='content'>
-    <div class="container-fluid">
-        <div class="container-fluid text-center">
-            <legend class='h1 header-main bottom-bord'>Score</legend>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12 pr-5 pl-5">
-            <div class='container-fluid text-center mt-3 rounded'>
-                <h1 class="header-secondary ">{{score}}/100</h1>
-            </div>
-            <div class="container-fluid text-center p-2">
-                <button type="submit" class="btn btn-secondary btn-sm rounded" id="scoring_criteria" data-toggle="modal" data-target="#exampleModal3" >Scoring Criteria</button>
-            </div>
-        </div>
-    </div>
-
-</div>
-
 <div class="container home shadow rounded p-3 mt-4 mb-4 footer-color" data-aos="fade-up" id='content'>
     <div class="container-fluid">
         <div class="container-fluid text-center">
@@ -150,7 +151,7 @@
         <div class="col-md-12">
             <div class='container mt-3'> 
                 <div>
-                    <h5 class="header-third">Legs:</h5>
+                    <h5 class="header-third">Knee:</h5>
                     <ul>
                         {% for tip in leg_tips %}
                         {% if '!' in tip  %}
@@ -230,9 +231,9 @@
         </div>
         <div class="modal-body">
         <div class=container>
-            <p><span style="color: red;">Red</span><span> = Arms (angle from the wrist to the elbow to the shoulder)</span></p>
-            <p><span style="color: blue;">Blue</span><span> = Legs (angle from the hip to the knee to the ankle)</span></p>
-            <p><span style="color: green;">Green</span><span> = Body (angle from the elbow to the shoulder to the hip)</span></p>
+            <p><span style="color: red;">Red</span><span> = Elbow (angle from the wrist to the elbow to the shoulder)</span></p>
+            <p><span style="color: blue;">Blue</span><span> = Knee (angle from the hip to the knee to the ankle)</span></p>
+            <p><span style="color: green;">Green</span><span> = Shoulder (angle from the elbow to the shoulder to the hip)</span></p>
         </div>
         <div class='container mt-4 whole-bord'>
             <img src="../static/assets/img/angles/angles.jpg" class="img-fluid" alt="Responsive image" id='start_phase'>
@@ -311,7 +312,7 @@ var myChart = new Chart(ctx, {
                 
         labels: {{label|tojson}},
         datasets: [{
-            label: 'Right Leg',
+            label: 'Right knee',
             data: {{data|tojson}},
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
@@ -322,7 +323,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 1, 
             fill: true,
         }, {
-            label: 'Left Leg',
+            label: 'Left knee',
             data: {{datatwo|tojson}},
             backgroundColor: [
                 'rgba(0, 99, 132, 0.2)',
@@ -352,7 +353,7 @@ var myChart = new Chart(ctx, {
                 
         labels: {{label_arm|tojson}},
         datasets: [{
-            label: 'Right arm',
+            label: 'Right elbow',
             data: {{data_r_arm|tojson}},
             backgroundColor: [
                 'rgba(255, 99, 0, 0.2)',
@@ -363,7 +364,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 1, 
             fill: true,
         }, {
-            label: 'Left arm',
+            label: 'Left elbow',
             data: {{data_l_arm|tojson}},
             backgroundColor: [
                 'rgba(0, 200, 0, 0.2)',
@@ -395,7 +396,7 @@ var myChart = new Chart(ctx, {
                 
         labels: {{label_body|tojson}},
         datasets: [{
-            label: 'Right side of body',
+            label: 'Right shoulder',
             data: {{dataright_body|tojson}},
             backgroundColor: [
                 'rgba(3, 244, 252, .2)',
@@ -406,7 +407,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 1, 
             fill: true,
         }, {
-            label: 'Left side of body',
+            label: 'Left shoulder',
             data: {{dataleft_body|tojson}},
             backgroundColor: [
                 'rgba(220, 227, 18, .2)',
@@ -438,7 +439,7 @@ var myChart = new Chart(ctx, {
                 
         labels: {{user_label|tojson}},
         datasets: [{
-            label: 'Right Leg',
+            label: 'Right knee',
             data: {{user_right|tojson}},
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
@@ -449,7 +450,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 1, 
             fill: true,
         }, {
-            label: 'Left Leg',
+            label: 'Left knee',
             data: {{user_left|tojson}},
             backgroundColor: [
                 'rgba(0, 99, 132, 0.2)',
@@ -479,7 +480,7 @@ var myChart = new Chart(ctx, {
                 
         labels: {{user_label|tojson}},
         datasets: [{
-            label: 'Right arm',
+            label: 'Right elbow',
             data: {{user_right_arm|tojson}},
             backgroundColor: [
                 'rgba(255, 99, 0, 0.2)',
@@ -490,7 +491,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 1, 
             fill: true,
         }, {
-            label: 'Left arm',
+            label: 'Left elbow',
             data: {{user_left_arm|tojson}},
             backgroundColor: [
                 'rgba(0, 200, 0, 0.2)',
@@ -520,7 +521,7 @@ var myChart = new Chart(ctx, {
                 
         labels: {{user_label|tojson}},
         datasets: [{
-            label: 'Right body',
+            label: 'Right shoulder',
             data: {{User_data_r_body|tojson}},
             backgroundColor: [
                 'rgba(3, 244, 252, .2)',
@@ -531,7 +532,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 1, 
             fill: true,
         }, {
-            label: 'Left body',
+            label: 'Left shoulder',
             data: {{User_data_l_body|tojson}},
             backgroundColor: [
                 'rgba(220, 227, 18, .2)',
